# networked-physics-simulation

./: README.md
server/: .gitignore  CMakeLists.txt  MainConfig.h  injection.h  main.cpp  todo.md
server/Flatbuffer/: compile.bat  message.fbs  message_generated.h
server/Network/: IPacketFactory.h  ISocketClient.h  Packet.h  PacketFactory.cpp  PacketFactory.h  UdpClient.cpp  UdpClient.h
server/Proto/: snapshot.pb.cc  snapshot.pb.h  snapshot.proto
server/Server/: MessageProcessor.cpp  MessageProcessor.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerConfig.h  Player.h  PlayerManager.cpp  PlayerManager.h  Server.cpp  Server.h
server/Simulation/: Simulation.cpp  Simulation.h  Snapshot.h
server/Util/: CircularArray.h  FlatbufferUtil.h
server/_Tests/: CatchMain.cpp  CircularArrayTests.cpp  NetworkManagerTests.cpp  PacketFactoryTests.cpp
server/_Tests/Mocks/: MockPacketFactory.h  MockSocketClient.h
unity-client/Assets/: BoxMaterial.mat  Cube.prefab  Sphere.prefab  Test.cs  scene.unity
unity-client/Assets/NetworkedPhysics/: ClientConnectMessage.cs  ClientDisconnectMessage.cs  ClientInputMessage.cs  Entity.cs  EntityType.cs  InputType.cs  KeepAliveMessage.cs  Message.cs  MessageAck.cs  MessageType.cs  ResetSimulationMessage.cs  ServerSnapshotMessage.cs  Transform.cs  Vec3.cs  Vec4.cs
unity-client/ProjectSettings/: ProjectSettings.asset
